done polishing first few introductory sections

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -60,12 +60,12 @@ tongues in Canada, and how many people speak each of them?*
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and
 > problem domain. In this book, we have simplified the data sets used in our
-> examples to concentrate on fundamental concepts. In real life, you cannot and should not
-> do data science without a domain expert. Alternatively, it is common to
-> practice data science in your own domain of expertise! Remember that when you work
-> with data, it is essential to think about *how* the data were collected,
-> which affects the conclusions you can draw. If your data are biased, then your
-> results will be biased!
+> examples to concentrate on methods and fundamental concepts. But in real
+> life, you cannot and should not do data science without a domain expert.
+> Alternatively, it is common to practice data science in your own domain of
+> expertise! Remember that when you work with data, it is essential to think
+> about *how* the data were collected, which affects the conclusions you can
+> draw. If your data are biased, then your results will be biased!
 
 ## Asking a question 
 
@@ -112,7 +112,7 @@ This is covered in detail in Chapter \@ref(viz), but again appears regularly thr
 Classification is used to answer predictive questions.
 For example, you might use classification to answer the following question:
 *given measurements of a tumour's average cell area and perimeter, is the tumour benign or malignant?*
-Classification is covered in Chapters \@ref(classification) and \@ref(classification\_continued).
+Classification is covered in Chapters \@ref(classification) and \@ref(classification2).
 4. **Regression:** predicting a quantitative value for a new observation. 
 Regression is also used to answer predictive questions.
 For example, you might use regression to answer the following question:
@@ -123,9 +123,9 @@ dataset. Clustering is often used to answer exploratory questions.
 For example, you might use clustering to answer the following question:
 *what products are commonly bought together on Amazon?*
 Clustering is covered in Chapter \@ref(clustering).
-6. **Estimation:** taking a small number of items from a large group 
- and making a good guess for the average or proportion 
-for the large group. Estimation is used to answer inferential questions.
+6. **Estimation:** taking measurements for small number of items from a large group 
+ and making a good guess for the average or proportion for the large group. Estimation 
+is used to answer inferential questions.
 For example, you might use estimation to answer the following question:
 *Given a survey of cellphone ownership of 100 Canadians, what proportion
 of the entire Canadian population own Android phones?* 
@@ -143,10 +143,13 @@ according to the 2016 census.
 ## Loading a tabular data set
 A data set is, at its core essence, a structured collection of numbers and characters.
 Aside from that, there are really no strict rules; data sets can come in 
-many different forms! Tables in Microsoft Excel are an example of perhaps
-the most common form of data set: *tablular data*. Tabular data are
+many different forms! Perhaps the most common form of data set that you will
+find in the wild, however, is *tabular data*. Think spreadsheets in Microsoft Excel: tabular data are
 rectangular-shaped and spreadsheet-like, as shown in Figure
-\@ref(fig:img-spreadsheet-vs-dataframe).  When we load this type of data into
+\@ref(fig:img-spreadsheet-vs-dataframe). In this book, we will focus primarily on tabular data.
+
+Since we are using R for data analysis in this book, the first step for us is to
+load the data into R. When we load tabular data into
 R, it is represented as a *data frame* object. Figure
 \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar
 to a spreadsheet where the rows are **observations** (the things that we
