changed the reference label name for classification 2; couldnt link to it before due to underscore

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1,4 +1,4 @@
-# Classification II: evaluation & tuning {#classification_continued}
+# Classification II: evaluation & tuning {#classification2}
 
 ## Overview 
 This chapter continues the introduction to predictive modelling through
