--- a/intro.Rmd
+++ b/intro.Rmd
@@ -151,56 +151,53 @@ rectangular-shaped and spreadsheet-like, as shown in Figure
 Since we are using R for data analysis in this book, the first step for us is to
 load the data into R. When we load tabular data into
 R, it is represented as a *data frame* object. Figure
-\@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar
-to a spreadsheet where the rows are **observations** (the things that we
-collect the data on e.g. voters, cities etc.), and the columns are
-**variables** (the characteristics of those observations e.g. voters' political
-affiliation, cities' population etc.). 
+\@ref(fig:img-spreadsheet-vs-dataframe) shows that an R data frame is very similar
+to a spreadsheet. We refer to the rows as **observations**; these are the things that we
+collect the data on, e.g., voters, cities, etc. We refer to the columns as
+**variables**; these are the characteristics of those observations, e.g., voters' political
+affiliations, cities' populations, etc. 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
 knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 ```
 
-The first kind of data file that we will learn how to load into R (as a data
-frame) is the *comma-separated values* format (`.csv` for short).  These files
+The first kind of data file that we will learn how to load into R as a data
+frame is the *comma-separated values* format (`.csv` for short).  These files
 have names ending in `.csv`, and can be opened and saved using common
 spreadsheet programs like Microsoft Excel and Google Sheets.  For example, the
 `.csv` file named `can_lang.csv` 
 [is included with the code for this book](https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv).
-If we were to open this data in a plain text editor (a program that removes all
-formatting from programs like Word, such as Notepad), we would see each row on
-its own line, and each entry in the table separated by a comma:
+If we were to open this data in a plain text editor (a program like Notepad that just shows
+text with no formatting), we would see each row on its own line, and each entry in the table separated by a comma:
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/can_lang.csv
 ```
 
-To load this data into R, so that we can do things with it (*e.g,* perform
+To load this data into R so that we can do things with it (e.g, perform
 analyses or create data visualizations), we will need to use a *function.* A
 function is a special word in R that takes instructions (we call these
 *arguments*) and does something. The function we will use to load a `.csv` file
-into R is called `read_csv`.
-
-In its most basic use-case, `read_csv` expects that the data file:
+into R is called `read_csv`. In its most basic 
+use-case, `read_csv` expects that the data file:
 
 - has column names (or *headers*),
 - uses a comma (`,`) to separate the columns, and
 - does not have row names.
 
 
-
 Below you'll see the code used to load the data into R using the `read_csv`
-function. However, the `read_csv` function is not included in the base
+function. Note that the `read_csv` function is not included in the base
 installation of R, meaning that it is not one of the primary functions ready to
 use when you install R. Therefore, you need to load it from somewhere else
-before you can use it. The place we will load it from is an R *package*. An R
-package is a collection of functions that can be used in addition to the
+before you can use it. The place from which we will load it is called an R *package*. 
+An R package is a collection of functions that can be used in addition to the
 built-in R package functions once loaded. The `read_csv` function, in
-particular, can be made accessible through the `library` function by loading
-the `tidyverse` package [@wickham2019tidverse].  `tidyverse` contains many
-functions, which allow us to load, clean, wrangle and visualize data. 
-
+particular, can be made accessible by loading the `tidyverse` package [@wickham2019tidverse]
+using the `library` function. The `tidyverse` package contains many
+functions that we will use throughout this book to load, clean, wrangle, 
+and visualize data. 
 
 ```{r load_tidyverse, message = TRUE, warning = TRUE}
 library(tidyverse)
@@ -208,46 +205,41 @@ library(tidyverse)
 > **In case you want to know more (optional):** Notice that we got some extra
 > output from R saying `Attaching packages` and `Conflicts` below our code
 > line. These are examples of *messages* in R, which give the user more
-> information that might be handy to know. 
-It is normal and expected that a message is printed out after loading the
-`tidyverse` and some packages. Generally, this message let's you know if
-functions from the different packages were loaded share the same name (which is
-confusing to R), and if so, which one you can access using just it's name (and
-which one you need to refer the package name and the function name to refer to
-it, this is called masking). For example, the `dplyr` and the `stats` package
-both use a function called `filter`. R is going to "mask" the `filter` function
-from the `stats` package, meaning that it will default to the `dplyr` version
-of this function.
-> Additionally, `tidyverse` is a special
-R package - it is a meta-package that bundles together several related and
-commonly used packages. Because of this it lists the packages it does the job
-of loading. For example, in this message, R tells us it loads the `ggplot2`
-package when it loads the `tidyverse` package.  Messages are not errors, so
-generally you don't need to take action when you see a message, but you can
-read a message and decide for yourself.  In future when we load this package in
-this book we will silence these messages to help with readability of the book.
-
+> information that might be handy to know. The `Attaching packages` message is
+> natural when loading `tidyverse`, since `tidyverse` actually automatically
+> causes other packages to be imported too, such as `dplyr`.  In the future
+> when we load `tidyverse` in this book we will silence these messages to help
+> with readability of the book.  The `Conflicts` message is also totally normal
+> in this circumstance.  This message tells you if functions from different
+> packages share the same name, which is confusing to R.  For example, in this
+> case, the `dplyr` package and the `stats` package both provide a function
+> called `filter`. The message above (`dplyr::filter() masks stats::filter()`)
+> is R telling you that it is going to default to the `dplyr` package version
+> of this function. So if you use the `filter` function, you will be using the
+> `dplyr` version. In order to use the `stats` version, you need to use its
+> full name `stats::filter`.  Messages are not errors, so generally you don't
+> need to take action when you see a message; but you should always read the message
+> and critically think about what it means and whether you need to do anything
+> about it.
 
 After loading the `tidyverse` package, we can call the `read_csv` function and
 pass it a single argument: the name of the file, `"can_lang.csv"`. We have to
 put quotes around file names and other letters and words that we use in our
-code to distinguish it from the special words that make up the R programming
+code to distinguish it from the special words (like functions!) that make up the R programming
 language.  The file's name is the only argument we need to provide because our
-file satisfies everything else the `read_csv` function expects in the default
+file satisfies everything else that the `read_csv` function expects in the default
 use-case.
-
 
 ```{r load_can_lang_data, warning=F, message=F}
 read_csv("data/can_lang.csv")
 ```
 
-> **In case you want to know more (optional):** There is another function,
-> which also loads csv files called `read.csv`, which is a *base* R function,
-> so we don't need to load a package to use it. Why are we using `read_csv`
-> instead of `read.csv`? We use the `read_csv` function from the `tidyverse`
-> because it's faster, and it has other advantages, such as a more readable
-> format when printing the data frame. Therefore we will use `read_csv` from
-> here on out. 
+> **In case you want to know more (optional):** There is another function
+> that also loads csv files named `read.csv`. We will *always* use 
+> `read_csv` in this book, as it is designed to play nicely with all of the 
+> other `tidyverse` functions, which we will use extensively in this book. Be
+> careful not to accidentally use `read.csv`, as it can cause some tricky
+> errors to occur in your code that are hard to track down!
 
 ## Naming things in R
 
