xlab and ylab explanation comment

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -500,7 +500,8 @@ Canadians residents)" would be much more informative.
 Adding additional layers to our visualizations that we create in `ggplot` is
 one common and easy way to improve and refine our data visualizations. New
 layers are added to `ggplot` objects using the `+` symbol. For example, we can
-use the `xlab` and `ylab` functions to add layers where we specify meaningful
+use the `xlab` (short for x axis label) and `ylab` (short for y axis label) functions 
+to add layers where we specify meaningful
 and informative labels for the x and y axes. Again, since we are specifying
 words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to
 `xlab` and `ylab`, we surround them with double-quotes. We can add many more
