edited introduction of assignment symbol

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -243,29 +243,35 @@ read_csv("data/can_lang.csv")
 
 ## Naming things in R
 
-When we loaded the language data collected in the 2016 Canadian census 
-above using `read_csv`, we did not give this data frame a name. 
+When we loaded the 2016 Canadian census language data
+using `read_csv`, we did not give this data frame a name. 
 Therefore the data was just printed on the screen, 
 and we cannot do anything else with it. That isn't very useful. 
 What would be more useful would be to give a name 
 to the data frame that `read_csv` outputs, 
-so that we could refer to it later for analysis and visualization.
+so that we can refer to it later for analysis and visualization.
 
-There are two possible ways to assign a name to something in R ---
-using either the assignment symbol (`<-`) or the equals symbol (`=`). 
+The way to assign a name to our data frame in R is via the *assignment symbol* `<-`.
+On the left side of the assignment symbol you put the name that you want
+to use, and on the right side of the assignment symbol
+you put the value that you want the name to refer to.
+Names can be used to refer to almost anything in R: numbers,
+words (also known as *strings* of characters), and data frames!
+Below, we set `my_number` to `3` (the result of `1+2`)
+and we set `name` to `"Alice"`.
 
 ```{r naming-things}
-first_name <- "Naming using the assignment symbol"
-second_name = "Naming using the equals symbol"
+my_number <- 1 + 2
+name <- "Alice"
 ```
-From a style perspective, the assignment symbol is preferred 
-and is what we will use in this book. 
-When we name something in R using the assignment symbol, `<-`, 
-we do not need to surround the name we are giving (on `<-`'s left-hand side) 
-with quotes, like the file name, 
-because we are formally telling R about this new word and giving it a value. 
-Only characters and words that act as values (on `<-`'s right-hand side) 
-need to be surrounded by quotes.
+
+Note that&mdash;unlike the file name `"data/can_lang.csv"` we specified before&mdash;when 
+we name something in R using the assignment symbol, `<-`, 
+we do not need to surround the name we are giving 
+with quotes. This is because we are formally telling R that this special word denotes
+the value of whatever is on the right hand side.
+Only characters and words that act as values on the right hand side of the assignment
+symbol&mdash;e.g., `"Alice"` above&mdash;need to be surrounded by quotes.
 
 Object names can consist of letters, numbers, periods `.` and underscores `_`.
 Other symbols won't work since they have their own meanings in R. For example,
@@ -273,7 +279,7 @@ Other symbols won't work since they have their own meanings in R. For example,
 the `+` symbol to an object R will complain and we will get an error!
 
 ```{r, eval = F}
-name+ <- 1
+na+me <- 1
 ```
 ```
 Error: unexpected assignment in "name+ <-"
