polish in assignment; clarifying why + wraps lines

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -251,20 +251,19 @@ What would be more useful would be to give a name
 to the data frame that `read_csv` outputs, 
 so that we can refer to it later for analysis and visualization.
 
-The way to assign a name to our data frame in R is via the *assignment symbol* `<-`.
+The way to assign a name to a value in R is via the *assignment symbol* `<-`.
 On the left side of the assignment symbol you put the name that you want
 to use, and on the right side of the assignment symbol
 you put the value that you want the name to refer to.
 Names can be used to refer to almost anything in R: numbers,
 words (also known as *strings* of characters), and data frames!
 Below, we set `my_number` to `3` (the result of `1+2`)
-and we set `name` to `"Alice"`.
+and we set `name` to the string `"Alice"`.
 
 ```{r naming-things}
 my_number <- 1 + 2
 name <- "Alice"
 ```
-
 Note that&mdash;unlike the file name `"data/can_lang.csv"` we specified before&mdash;when 
 we name something in R using the assignment symbol, `<-`, 
 we do not need to surround the name we are giving 
@@ -272,6 +271,14 @@ with quotes. This is because we are formally telling R that this special word de
 the value of whatever is on the right hand side.
 Only characters and words that act as values on the right hand side of the assignment
 symbol&mdash;e.g., `"Alice"` above&mdash;need to be surrounded by quotes.
+
+After making the assignment, we can use the special name words we have created in
+place of their values. For example, if we want to do something with the value `3` later on, 
+we can just use `my_number` instead. Let's try adding 2 to `my_number`; you will see that
+R just interprets this as adding 2 and 3:
+```{r naming-things2}
+my_number + 2
+```
 
 Object names can consist of letters, numbers, periods `.` and underscores `_`.
 Other symbols won't work since they have their own meanings in R. For example,
@@ -302,19 +309,16 @@ Guide](https://principles.tidyverse.org/names-attribute.html#universal-names)
 can_lang <- read_csv("data/can_lang.csv")
 ```
 
-Wait a minute, nothing happened this time! Or at least it looks like that? 
-But actually, something did happen! The data was loaded in 
+Wait a minute, nothing happened this time! Where's our data?
+Actually, something did happen: the data was loaded in 
 and now has the name `can_lang` associated with it. 
 And we can use that name to access the data frame and do things with it. 
 We can type the name of the data frame to print the first few rows 
 on the screen.
 
-
 ```{r print}
 can_lang
 ```
-
-
 
 ## Creating subsets of data frames with `filter` & `select`
 
@@ -481,12 +485,14 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity")
 ```
 
-> **In case you have used R before and are curious:** There are a small number
-> of situations in which you can have a single R expression span multiple
-> lines.  Here, the `+` symbol at the end of the first line tells R that the
-> expression isn't done yet and to continue reading on the following line.
-> While not strictly necessary, this sort of pattern will appear a lot when
-> using `ggplot` as it keeps things more readable.
+> **In case you have used R before and are curious:** The vast majority of the
+> time, a single expression in R must be contained in a single line of code.
+> However, there *are* a small number of situations in which you can have a
+> single R expression span multiple lines. Above is one such case: here, R knows that a line cannot
+> end with a `+` symbol, and so it keeps reading the next line to figure out
+> what the right hand side of the `+` symbol should be.  We could, of course,
+> put all of the added layers on one line of code, but splitting them across
+> multiple lines helps a lot with code readability.
 
 
 ### Formatting ggplot objects
