starting on editing subset creation via filter/select

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -255,7 +255,7 @@ The way to assign a name to a value in R is via the *assignment symbol* `<-`.
 On the left side of the assignment symbol you put the name that you want
 to use, and on the right side of the assignment symbol
 you put the value that you want the name to refer to.
-Names can be used to refer to almost anything in R: numbers,
+Names can be used to refer to almost anything in R, such as numbers,
 words (also known as *strings* of characters), and data frames!
 Below, we set `my_number` to `3` (the result of `1+2`)
 and we set `name` to the string `"Alice"`.
@@ -264,7 +264,7 @@ and we set `name` to the string `"Alice"`.
 my_number <- 1 + 2
 name <- "Alice"
 ```
-Note that&mdash;unlike the file name `"data/can_lang.csv"` we specified before&mdash;when 
+Note that&mdash;unlike the file name `"data/can_lang.csv"` that we specified before&mdash;when 
 we name something in R using the assignment symbol, `<-`, 
 we do not need to surround the name we are giving 
 with quotes. This is because we are formally telling R that this special word denotes
@@ -282,14 +282,14 @@ my_number + 2
 
 Object names can consist of letters, numbers, periods `.` and underscores `_`.
 Other symbols won't work since they have their own meanings in R. For example,
-`+` is an addition symbol used to add numbers. If we try to assign a name with
-the `+` symbol to an object R will complain and we will get an error!
+`+` is the addition symbol; if we try to assign a name with
+the `+` symbol, R will complain and we will get an error!
 
 ```{r, eval = F}
 na+me <- 1
 ```
 ```
-Error: unexpected assignment in "name+ <-"
+Error: unexpected assignment in "na+me <-"
 ```
 
 There are certain conventions for naming objects in R. When naming an object we
@@ -313,8 +313,10 @@ Wait a minute, nothing happened this time! Where's our data?
 Actually, something did happen: the data was loaded in 
 and now has the name `can_lang` associated with it. 
 And we can use that name to access the data frame and do things with it. 
-We can type the name of the data frame to print the first few rows 
-on the screen.
+For example, we can type the name of the data frame to print the first few rows 
+on the screen. You will also see at the top that the number of observations (i.e., rows) and 
+variables (i.e., columns) are printed. Printing the first few rows of a data frame 
+like this is a handy way to get a quick sense for what is contained in a data frame.
 
 ```{r print}
 can_lang
@@ -323,16 +325,16 @@ can_lang
 ## Creating subsets of data frames with `filter` & `select`
 
 Now that we've loaded our data into R, we can start wrangling the data to
-answer our question, *what ten Aboriginal languages were most often reported in
-2016 as mother tongues in Canada, and how many people speak each of them?* To
-answer this question, we can construct a table with the ten Aboriginal
-languages that have highest counts in the `mother_tongue` column. 
+answer our question, *which ten Indigenous languages were least often reported in 2016 as mother
+tongues in Canada, and how many people speak each of them?* To
+answer this question, we can construct a table with the ten Indigenous
+languages that have the smallest counts in the `mother_tongue` column. 
 
 The `select` and `filter` functions from the `tidyverse` package will help us
 here. The `select` function allows you to create a subset of the columns of a
 data frame, while the `filter` function allows you to obtain a subset of the
 rows with specific values. Therefore, we can `filter` rows for only the
-Aboriginal languages in the data set and then use `select` to obtain only the
+Indigenous languages in the data set and then use `select` to obtain only the
 columns we want to include in our table.
 
 Let's take a look at the language data collected in the 2016 Canadian census
@@ -346,8 +348,7 @@ can_lang
 Looking at our `can_lang` data, we see the column `category` contains different
 high-level categories of languages, which include "Aboriginal languages",
 "Non-Official & Non-Aboriginal languages" and "Official languages".  To answer
-our question (what ten Aboriginal languages were most often reported in 2016 as
-mother tongues in Canada, and how many people speak each of them?) we want to
+our question we want to
 filter our data set so we restrict our attention to only the languages in the
 "Aboriginal languages" category. 
 
