minor awk wording fix

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -237,7 +237,7 @@ read_csv("data/can_lang.csv")
 > **In case you want to know more (optional):** There is another function
 > that also loads csv files named `read.csv`. We will *always* use 
 > `read_csv` in this book, as it is designed to play nicely with all of the 
-> other `tidyverse` functions, which we will use extensively in this book. Be
+> other `tidyverse` functions, which we will use extensively. Be
 > careful not to accidentally use `read.csv`, as it can cause some tricky
 > errors to occur in your code that are hard to track down!
 
