--- a/intro.Rmd
+++ b/intro.Rmd
@@ -51,10 +51,10 @@ In this data there are 214 languages recorded, each having 6 different propertie
 6. `lang_known`: Number of Canadians who reported knowledge of the language.
 
 According to the census, more than 60 Indigenous languages were reported
-as being spoken in Canada. Suppose we want to know which are the most critically endangered;
+as being spoken in Canada. Suppose we want to know which are the most common;
 then we might ask the following question, which we wish to answer using our data: 
 
-*Which ten Indigenous languages were least often reported in 2016 as mother
+*Which ten Indigenous languages were most often reported in 2016 as mother
 tongues in Canada, and how many people speak each of them?* 
 
 > **A note about the *data* in data science!** 
@@ -132,12 +132,12 @@ of the entire Canadian population own Android phones?*
 Estimation is covered in Chapter \@ref(inference).
 
 Referring to Table \@ref(tab:questions-table), our question about 
-rare languages is an example of a *descriptive question*: we are
+Indigenous languages is an example of a *descriptive question*: we are
 summarizing the characteristics of a data set without further interpretation.
 And referring to the list above, it looks like we should use visualization
 and perhaps some summarization to answer the question. So in the remainder
 of this chapter, we will work towards making a visualization that shows 
-us the ten rarest Indigenous languages in Canada and their associated counts,
+us the ten most common Indigenous languages in Canada and their associated counts,
 according to the 2016 census. 
 
 ## Loading a tabular data set
@@ -264,13 +264,14 @@ and we set `name` to the string `"Alice"`.
 my_number <- 1 + 2
 name <- "Alice"
 ```
-Note that&mdash;unlike the file name `"data/can_lang.csv"` that we specified before&mdash;when 
+Note that when 
 we name something in R using the assignment symbol, `<-`, 
-we do not need to surround the name we are giving 
-with quotes. This is because we are formally telling R that this special word denotes
+we do not need to surround the name we are creating  with quotes. This is 
+because we are formally telling R that this special word denotes
 the value of whatever is on the right hand side.
-Only characters and words that act as values on the right hand side of the assignment
-symbol&mdash;e.g., `"Alice"` above&mdash;need to be surrounded by quotes.
+Only characters and words that act as *values* on the right hand side of the assignment
+symbol&mdash;e.g., the file name `"data/can_lang.csv"` that we specified before, or `"Alice"` above&mdash;&mdash;need 
+to be surrounded by quotes.
 
 After making the assignment, we can use the special name words we have created in
 place of their values. For example, if we want to do something with the value `3` later on, 
@@ -325,65 +326,53 @@ can_lang
 ## Creating subsets of data frames with `filter` & `select`
 
 Now that we've loaded our data into R, we can start wrangling the data to
-answer our question, *which ten Indigenous languages were least often reported in 2016 as mother
-tongues in Canada, and how many people speak each of them?* To
-answer this question, we can construct a table with the ten Indigenous
-languages that have the smallest counts in the `mother_tongue` column. 
-
-The `select` and `filter` functions from the `tidyverse` package will help us
-here. The `select` function allows you to create a subset of the columns of a
-data frame, while the `filter` function allows you to obtain a subset of the
-rows with specific values. Therefore, we can `filter` rows for only the
-Indigenous languages in the data set and then use `select` to obtain only the
+find the ten Indigenous languages that were most often reported
+in 2016 as mother tongues in Canada. In particular, we will construct 
+a table with the ten Indigenous languages that have the largest 
+counts in the `mother_tongue` column. 
+The `filter` and `select` functions from the `tidyverse` package will help us
+here. The `filter` function allows you to obtain a subset of the
+rows with specific values, while the `select` function allows you 
+to obtain a subset of the columns. Therefore, we can `filter` the rows to extract the
+Indigenous languages in the data set, and then use `select` to obtain only the
 columns we want to include in our table.
 
-Let's take a look at the language data collected in the 2016 Canadian census
-again to familiarize ourselves with it. We will do this by printing the data we
-loaded earlier in the chapter to the screen. 
-```{r print_data_again}
-can_lang
-```
-
 ### Using `filter` to extract rows
-Looking at our `can_lang` data, we see the column `category` contains different
+Looking at the `can_lang` data above, we see the column `category` contains different
 high-level categories of languages, which include "Aboriginal languages",
 "Non-Official & Non-Aboriginal languages" and "Official languages".  To answer
-our question we want to
-filter our data set so we restrict our attention to only the languages in the
-"Aboriginal languages" category. 
+our question we want to filter our data set so we restrict our attention 
+to only those languages in the "Aboriginal languages" category. 
 
 We can use the `filter` function to obtain the subset of rows with desired
-values from a data frame. Our first argument is the name of the data frame
-object, `can_lang`. The second argument is a logical statement to use when
-filtering the rows. We are interested in looking at the languages in the
-"Aboriginal languages" higher-level category in this data set and to filter
-only those rows, we use the *equivalency operator* `==` to compare the values
-of the `category` column with the value `"Aboriginal languages"`.  Similar to
+values from a data frame. The first argument to `filter` is the name of the data frame
+object, `can_lang`. The second argument is a *logical statement* to use when
+filtering the rows. A logical statement evaluates to either `TRUE` or `FALSE`;
+`filter` keeps only those rows for which the logical statement evaluates to `TRUE`.
+For example, in our analysis, we are interested in keeping only languages in the
+"Aboriginal languages" higher-level category. We can use 
+the *equivalency operator* `==` to compare the values
+of the `category` column with the value `"Aboriginal languages"`; you will learn about
+many other kinds of logical statement in Chapter \@ref(wrangling).  Similar to
 when we loaded the data file and put quotes around the filename, here we need
 to put quotes around `"Aboriginal languages"`. Using quotes tells R that this
-is a character value and not one of the special words that make up R
+is a string *value* and not one of the special words that make up R
 programming language, nor one of the names we have given to data frames in the
 code we have already written.
-
-
-> What's a logical statement? A logical statement is a sentence that is `TRUE`
-> or `FALSE`. For example, `1 > 2` is  logical statement. If you type this
-> statement into R, you are asking R "Is the number 1 greater than 2?" and you
-> will get `FALSE` as your answer. 
-
 With these arguments, `filter` returns a data frame that has all the columns of
-the input data frame but only the rows we asked for in our logical filter
+the input data frame, but only those rows we asked for in our logical filter
 statement. 
 
 ```{r}
 aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
 aboriginal_lang
 ```
-It's good practice to check the output we get makes sense after we perform a
+It's good practice to check the output after using a
 function in R. We can see the original `can_lang` data set contained 214 rows
-with categories other than just "Aboriginal languages". The data frame
-`aboriginal_lang` contains 67 rows and looks like it only contains languages in
-the "Aboriginal languages" in the `category` column, which is what we want!
+with multiple kinds of `category`. The data frame
+`aboriginal_lang` contains only 67 rows, and looks like it only contains languages in
+the "Aboriginal languages" in the `category` column. So it looks like the function 
+gave us the result we wanted!
 
 ### Using `select` to extract columns
 
@@ -391,38 +380,35 @@ Now let's use `select` to extract the `language` and `mother_tongue` columns
 from this data frame. To extract these columns, we need to provide the `select`
 function with three arguments. The first argument is the name of the data frame
 object, which in this example is `aboriginal_lang`. The second and third
-arguments are the column names that we want to select, here `language` and
+arguments are the column names that we want to select: `language` and
 `mother_tongue`. After passing these three arguments, the  `select` function
 returns two columns (the `language` and `mother_tongue` columns that we asked
-for) as a data frame.
-
+for) as a data frame. This code is also a great example of why being
+able to name things in R is useful: you can see that we are using the
+result of our earlier `filter` step (which we named `aboriginal_lang`) here 
+in the next step of the analysis!
 
 ```{r}
 selected_lang <- select(aboriginal_lang, language, mother_tongue)
 selected_lang
 ```
-> Note: we didn't actually *need* to `select` the columns in our data frame
-> before moving on to the next step! However, `select` allows us to display
-> only the columns in the data frame we want and can make it easier for us to
-> view the data especially if we have a large data frame with lots of columns. 
-
 ### Using `arrange` to order and `slice` to select rows by index number
 
 We have used `filter` and `select` to obtain a table with only the Aboriginal
 languages in the data set and their associated counts. However, we want to know
 the **ten** languages that are spoken most often. As a next step, we could
-order the `mother_tongue` column from greatest to least and then select only
+order the `mother_tongue` column from greatest to least and then extract only
 the top ten rows. This is where the `arrange` and `slice` functions come to the
 rescue! 
 
-The  `arrange` function allows us to order the rows of a data frame by the
-values of a selected column. We need to pass the data frame, and the variable
-to order by in the first two arguments of this function. Since we want to
-choose the ten Aboriginal languages most often reported as a mother tongue
+The `arrange` function allows us to order the rows of a data frame by the
+values of a particular column. We need to pass the data frame as the first
+argument to this function, and the variable to order by as the second argument. 
+Since we want to choose the ten Aboriginal languages most often reported as a mother tongue
 language, we will use the `arrange` function to order the rows in our
-`selected_lang` data frame by the `mother_tongue` column. We want to order the
-rows in descending order (from largest to smallest) so we include `desc` before
-the column name `mother_tongue` to sort in descending order. 
+`selected_lang` data frame by the `mother_tongue` column. We want to
+arrange the rows in descending order (from largest to smallest),
+so we pass the column to the `desc` function before using it as an argument. 
 
 ```{r}
 arranged_lang <- arrange(selected_lang, by = desc(mother_tongue))
@@ -430,56 +416,53 @@ arranged_lang
 ```
 
 Next we will use the `slice` function, which selects rows according to their
-row number. Since we want to choose ten languages, we will indicate we want the
+row number. Since we want to choose the most common ten languages, we will indicate we want the
 rows 1 to 10 using the argument `1:10`.
 ```{r}
 ten_lang <- slice(arranged_lang, 1:10)
 ten_lang
 ```
 
-We have now answered our initial question by generating this frequency table!
-Are we done? Technically, this table answers our question. However, we can go
-one step further and create a visualization to answer our question as well.
+We have now answered our initial question by generating this table!
+Are we done? Well, not quite; tables are almost never the best way to present
+the result of your analysis to your audience. Even the simple table above with
+only two columns presents some difficulty: for example, you have to scrutinize
+the table quite closely to get a sense for the relative numbers of speakers of 
+each language. When you move on to more complicated analyses, this issue only 
+gets worse. In contrast, a *visualization* would convey this information in a much 
+more easily understood format. 
 Visualizations are a great tool for summarizing information to help you
-effectively communicate with your audience. While tables are great for
-displaying information, a visualization can sometimes provide more insight. For
-example, if we were really interested in *comparing* the values between the
-different languages (e.g. how many more people reported "Cree, n.o.s." versus
-"Inuktitut" versus "Ojibway" etc.), then a visualization is a more effective
-way to communicate your results than a frequency table. 
-
+effectively communicate with your audience. 
 
 ## Exploring data with visualizations
-Creating effective data visualizations is an essential piece to any data
-analysis. We will develop a visualization of the language data collected in the
-2016 Canadian census we’ve been working with to help us understand the ten
-Aboriginal languages that were most often reported in 2016 as mother tongues in
-Canada and the number of people that speak each of them.
+Creating effective data visualizations is an essential component of any data
+analysis. In this section we will develop a visualization of the 
+ ten Aboriginal languages that were most often reported in 2016 as mother tongues in
+Canada, as well as the number of people that speak each of them.
 
 ### Using `ggplot` to create a bar plot
 
 In our data set, we can see that `language` and `mother_tongue` are in separate
-columns. In addition, there is a single row (or observation) for each language.
+columns (or variables). In addition, there is a single row (or observation) for each language.
 The data are, therefore, in what we call a *tidy data* format. Tidy data is a
 fundamental concept and will be a significant focus in the remainder of this
 book: many of the functions from `tidyverse` require tidy data, including the
 `ggplot` function that we will use shortly for our visualization. We will
-formally introduce this concept in Chapter \@ref(wrangling).
-
+formally introduce tidy data in Chapter \@ref(wrangling).
 
 We will make a bar plot to visualize our data. A bar plot is a chart where the
 heights of the bars represent certain values, like counts or proportions. We
-will make a bar plot using the `most_at_home` and `language` columns from our
+will make a bar plot using the `mother_tongue` and `language` columns from our
 `ten_lang` data frame. To create a bar plot of these two variables using the 
-`ggplot` function, we would do the following: 
+`ggplot` function, we must specify the data frame, which variables
+to put on the x and y axes, and what kind of plot to create. The `ggplot`
+function and its common usage is illustrated in Figure \@ref(fig:img-ggplot).
+Figure \@ref(fig:barplot-mother-tongue) shows the resulting bar plot
+generated by following the instructions in Figure \@ref(fig:img-ggplot).
 
 ```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100", fig.retina = 2}
 knitr::include_graphics("img/ggplot_function.jpeg")
 ```
-
-In Figure \@ref(fig:barplot-mother-tongue), we create a bar plot using the
-`ggplot` function following the instructions described in figure
-\@ref(fig:img-ggplot):
 
 ```{r barplot-mother-tongue, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
@@ -501,14 +484,14 @@ ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
 It is exciting that we can already visualize our data to help answer our
 question, but we are not done yet! We can (and should) do more to improve the
 interpretability of the data visualization that we created. For example, by
-default, R uses the column names as the axis labels. However, usually, these
+default, R uses the column names as the axis labels. Usually these
 column names do not have enough information about the variable in the column.
 We really should replace this default with a more informative label. For the
 example above, R uses the column name `mother_tongue` as the label for the
-y-axis, but most people will not know what that is. And even if they did, they
+y axis, but most people will not know what that is. And even if they did, they
 will not know how we measure this variable, nor which group of people the
-measurements were taken. An axis label that reads "Mother tongue (Number of
-Canadians residents)" would be much more informative.
+measurements were taken. An axis label that reads "Mother Tongue (Number of
+Canadians, 2016 Census)" would be much more informative.
 
 Adding additional layers to our visualizations that we create in `ggplot` is
 one common and easy way to improve and refine our data visualizations. New
@@ -516,7 +499,7 @@ layers are added to `ggplot` objects using the `+` symbol. For example, we can
 use the `xlab` (short for x axis label) and `ylab` (short for y axis label) functions 
 to add layers where we specify meaningful
 and informative labels for the x and y axes. Again, since we are specifying
-words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to
+words (e.g. `"Mother Tongue (Number of Canadians, 2016 Census)"`) as arguments to
 `xlab` and `ylab`, we surround them with double-quotes. We can add many more
 layers to format the plot further, and we will explore these in Chapter
 \@ref(viz).
@@ -525,39 +508,42 @@ layers to format the plot further, and we will explore these in Chapter
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") +
   xlab("Language") +
-  ylab("Mother tongue (Number of Canadians residents)")
+  ylab("Mother Tongue (Number of Canadians, 2016 Census)")
 ```
 
-In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making
-it challenging to read the different languages. One solution is to rotate the
-plot, so the bars are horizontal, and thus the labels will be more readable. We
-will swap the x and y coordinate axes:
+The result is shown in Figure \@ref(fig:barplot-mother-tongue-labs). 
+This is already quite an improvement! Let's tackle the next major issue with the visualization
+in Figure \@ref(fig:barplot-mother-tongue-labs): the overlapping x axis labels, which are
+currently making it difficult to read the different language names.
+One solution is to rotate the plot such that the bars are horizontal rather than vertical.
+To accomplish this, we will swap the x and y coordinate axes:
 
 ```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 ggplot(ten_lang, aes(x = mother_tongue, y = language)) +
   geom_bar(stat = "identity") +
-  xlab("Mother tongue (Number of Canadians residents)") +
+  xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
   ylab("Language") 
 ```
 
-
-From figure \@ref(fig:barplot-mother-tongue-flipped), we have answered our
-initial question. However, our visualization could be made more transparent by
+Another big step forward, as shown in Figure \@ref(fig:barplot-mother-tongue-flipped)! There 
+are no more serious issues with the visualization. Now comes time to refine
+the visualization to make it even more well-suited to answering the question
+we asked earlier in this chapter. For example, the visualization could be made more transparent by
 organizing the bars according to the number of Canadian residents reporting
-each language rather than in alphabetical order. We can reorder the bars using
+each language, rather than in alphabetical order. We can reorder the bars using
 the `reorder` function, which orders a variable (here `language`) based on the
-values of the second variable (`mother_tongue`):
+values of the second variable (`mother_tongue`). 
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
 ggplot(ten_lang, aes(x = mother_tongue, y = reorder(language, mother_tongue))) +
   geom_bar(stat = "identity") +
-  xlab("Mother tongue (Number of Canadians residents)") +
+  xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
     ylab("Language") 
 ```
 
-From figure \@ref(fig:barplot-mother-tongue-reorder), we have answered our
-question since we can see what the ten most often reported Aboriginal languages
-were according to the 2016 Candian census and how many people speak them. For
+Figure \@ref(fig:barplot-mother-tongue-reorder) provides a very clear and well-organized
+answer to our original question; we can see what the ten most often reported Aboriginal languages
+were, according to the 2016 Candian census, and how many people speak each of them. For
 instance, we can see that the Aboriginal language most often reported was Cree
 n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 
@@ -568,42 +554,41 @@ n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 > includes Moose Cree, Northern East Cree and Southern East Cree)
 > [@language2018]. 
 
-Learning how to describe data visualizations is a very useful skill. We will
-provide descriptions for you in this book (as we did above) until we get to
-Chapter \@ref(viz), which focuses on data visualization. Then, we will explicitly teach
-you how to do this yourself and not over-state or over-interpret the results
-from a visualization.
-
 ### Putting it all together
 
-In the code chunk below, we put everything from this chapter together. We have
+In the block of code below, we put everything from this chapter together, with a few
+modifications. In particular, we have
 added a few more layers to make the data visualization even more effective.
 Specifically, we changed the colour of the bars and changed the background from
-grey to white to improve the contrast. Note that we actually skipped the
-`select` step that we did above just to show you that we didn't actually need
-to `select` the columns to create the visualization! 
+grey to white to improve the contrast. We have also actually skipped the
+`select` step that we did above; since you specify the variable names to plot
+in the `ggplot` function, you don't actually need to `select` the columns in advance
+when creating a visualization. And finally, we provided *comments* next to 
+many of the lines of code below using the
+hash symbol `#`. When R sees a `#` sign, it will ignore all of the text that
+comes after the symbol on that line. So you can use comments to explain lines 
+of code for others, and perhaps more importantly, your future self!
+It's good practice to get in the habit of
+commenting your code to improve its readability.
 
-> Notice that we provided *comments* beside some of the code below using the
-> hashtag symbol `#`. You can use comments to explain lines of code for others
-> or yourself in the future! If R sees a `#` sign, it will ignore all the code
-> that comes after it on that line. It's good practice to get in the habit of
-> commenting your code to improve your code's readability.
-
-```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
+```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 library(tidyverse)
 
+# load the data set
 can_lang <- read_csv("data/can_lang.csv")
 
+# obtain the 10 most common Aboriginal languages
 aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
 arranged_lang <- arrange(aboriginal_lang, by = desc(mother_tongue))
 ten_lang <- slice(arranged_lang, 1:10)
 
+# create the visualization
 ggplot(ten_lang, aes(
   x = mother_tongue,
-  y = reorder(language, mother_tongue)
+  y = reorder(language, mother_tongue)  # make sure the plot orders the bars by size
 )) +
   geom_bar(stat = "identity", fill = "steelblue") +
-  xlab("Mother tongue (Number of Canadians residents)") +
+  xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
   ylab("Language") +
   theme_bw() # use a theme to have a white background
 ```
@@ -613,8 +598,8 @@ performed an entire data science workflow with a highly effective data
 visualization! We asked a question, loaded the data into R, wrangled the data
 (using `filter`, `arrange` and `slice`) and created a data visualization to
 help answer our question.  In this chapter, you got a quick taste of the data
-science workflow, but we will learn each of these steps in more detail in the
-coming chapters! 
+science workflow; continue on with the next few chapters to learn each of 
+these steps in much more detail!
 
 ## Accessing documentation
 
