switch to aboriginal languages instead of indigenous languages to match dataframe

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -50,11 +50,11 @@ In this data there are 214 languages recorded, each having 6 different propertie
 5. `most_at_work`: Number of Canadians who reported the language as being used most often at work.
 6. `lang_known`: Number of Canadians who reported knowledge of the language.
 
-According to the census, more than 60 Indigenous languages were reported
+According to the census, more than 60 Aboriginal languages were reported
 as being spoken in Canada. Suppose we want to know which are the most common;
 then we might ask the following question, which we wish to answer using our data: 
 
-*Which ten Indigenous languages were most often reported in 2016 as mother
+*Which ten Aboriginal languages were most often reported in 2016 as mother
 tongues in Canada, and how many people speak each of them?* 
 
 > **A note about the *data* in data science!** 
@@ -132,12 +132,12 @@ of the entire Canadian population own Android phones?*
 Estimation is covered in Chapter \@ref(inference).
 
 Referring to Table \@ref(tab:questions-table), our question about 
-Indigenous languages is an example of a *descriptive question*: we are
+Aboriginal languages is an example of a *descriptive question*: we are
 summarizing the characteristics of a data set without further interpretation.
 And referring to the list above, it looks like we should use visualization
 and perhaps some summarization to answer the question. So in the remainder
 of this chapter, we will work towards making a visualization that shows 
-us the ten most common Indigenous languages in Canada and their associated counts,
+us the ten most common Aboriginal languages in Canada and their associated counts,
 according to the 2016 census. 
 
 ## Loading a tabular data set
@@ -326,15 +326,15 @@ can_lang
 ## Creating subsets of data frames with `filter` & `select`
 
 Now that we've loaded our data into R, we can start wrangling the data to
-find the ten Indigenous languages that were most often reported
+find the ten Aboriginal languages that were most often reported
 in 2016 as mother tongues in Canada. In particular, we will construct 
-a table with the ten Indigenous languages that have the largest 
+a table with the ten Aboriginal languages that have the largest 
 counts in the `mother_tongue` column. 
 The `filter` and `select` functions from the `tidyverse` package will help us
 here. The `filter` function allows you to obtain a subset of the
 rows with specific values, while the `select` function allows you 
 to obtain a subset of the columns. Therefore, we can `filter` the rows to extract the
-Indigenous languages in the data set, and then use `select` to obtain only the
+Aboriginal languages in the data set, and then use `select` to obtain only the
 columns we want to include in our table.
 
 ### Using `filter` to extract rows
